--- a/LanguageLearningPro/app/src/main/res/layout/activity_progress_dashboard.xml
+++ b/LanguageLearningPro/app/src/main/res/layout/activity_progress_dashboard.xml
@@ -1,6 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- activity_progress_dashboard.xml -->
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Progress summary -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvProgressSummary"
+        android:text="Your language learning progress summary goes here" />
+
+    <!-- Goals and achievements -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvGoals"
+        android:text="Your goals and achievements go here" />
+
+    <!-- Charts or graphs showing progress over time -->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressChart"
+        android:src="@drawable/progress_chart" />
+</LinearLayout>
