--- a/LanguageLearningPro/app/src/main/res/layout/activity_exercise_list.xml
+++ b/LanguageLearningPro/app/src/main/res/layout/activity_exercise_list.xml
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- activity_exercise_list.xml -->
+<androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="match_parent"
+    layout_height=""
+    layout_width=""
+    xmlns:android="http://schemas.android.com/apk/res/android" />
