Collabrated on lesson listing functionality

--- a/LanguageLearningPro/LanguageLearningPro/app/src/main/res/layout/activity_login.xml
+++ b/LanguageLearningPro/LanguageLearningPro/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,42 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+
+    <ImageButton
+        android:id="@+id/backB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="?attr/selectableItemBackground"
+        android:padding="8dp"
+        android:src="@drawable/ic_back"
+        />
+
+
+    <TextView
+        android:id="@+id/loginTitleTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textStyle="bold|italic"
+        android:textColor="@color/textPurple"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="50dp"
+        android:textAllCaps="true"
+        android:text="Login"/>
+
+
+
     <!-- Input fields -->
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:minHeight="48dp" />
+        android:minHeight="48dp"
+        android:layout_marginTop="70dp"/>
 
     <EditText
         android:id="@+id/etPassword"
@@ -32,6 +61,7 @@
 
     <!-- Forgot Password link -->
     <TextView
+        android:id="@+id/forgotPassTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password?"
