--- a/LanguageLearningPro/LanguageLearningPro/app/src/main/res/values/colors.xml
+++ b/LanguageLearningPro/LanguageLearningPro/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="textPurple">#6750A4</color>
+
+    <color name="colorSuccess">#008000</color>
+
+
 </resources>
