--- a/LanguageLearningPro/LanguageLearningPro/app/src/main/res/layout/activity_welcome.xml
+++ b/LanguageLearningPro/LanguageLearningPro/app/src/main/res/layout/activity_welcome.xml
@@ -5,6 +5,14 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <ImageView
+        android:id="@+id/logoImage"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/learning_pro_logo"/>
+
     <!-- Welcome message -->
     <TextView
         android:layout_width="wrap_content"
