--- a/LanguageLearningPro/app/src/main/res/layout/activity_language_selection.xml
+++ b/LanguageLearningPro/app/src/main/res/layout/activity_language_selection.xml
@@ -6,10 +6,9 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
 
         
@@ -21,6 +20,8 @@
             android:background="?attr/selectableItemBackground"
             android:padding="8dp"
             android:src="@drawable/ic_back"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             />
 
         <TextView
@@ -30,11 +31,24 @@
             android:text="Choose A Language"
             android:textStyle="bold|italic"
             android:textColor="@color/textPurple"
-            android:layout_marginLeft="60dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="16dp"
+            android:layout_toEndOf="@+id/backB"
             android:textSize="30sp"/>
 
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/logOutBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="60dp"
+            android:layout_alignParentEnd="true"
+            android:background="?attr/selectableItemBackground"
+            android:padding="8dp"
+            android:src="@drawable/ic_logout"/>
+
+    </RelativeLayout>
 
     <!-- List of available languages -->
     <RadioGroup
@@ -172,6 +186,19 @@
             android:checked="false"
             android:padding="2dp"
             android:text="Turkish"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
+
+
+        <RadioButton
+            android:id="@+id/telugu"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:checked="false"
+            android:padding="2dp"
+            android:text="Telugu"
             android:textAlignment="center"
             android:textSize="20sp" />
 
