--- a/LanguageLearningPro/app/src/main/res/layout/activity_lesson_list.xml
+++ b/LanguageLearningPro/app/src/main/res/layout/activity_lesson_list.xml
@@ -8,10 +8,9 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <ImageButton
             android:id="@+id/backB"
@@ -21,21 +20,36 @@
             android:background="?attr/selectableItemBackground"
             android:padding="8dp"
             android:src="@drawable/ic_back"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             />
 
         <TextView
             android:id="@+id/titleListLessons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Choose A Language"
-            android:textStyle="bold|italic"
+            android:text="English Lessons"
             android:capitalize="words"
+            android:textStyle="bold|italic"
             android:textColor="@color/textPurple"
-            android:layout_marginLeft="60dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="16dp"
+            android:layout_toEndOf="@+id/backB"
             android:textSize="30sp"/>
 
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/logOutBTN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="60dp"
+            android:layout_alignParentEnd="true"
+            android:background="?attr/selectableItemBackground"
+            android:padding="8dp"
+            android:src="@drawable/ic_logout"/>
+
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
